# Final-Project-MLOps

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml
api/: api.py  metrics_tracker.py
artifacts/: feature_baseline.json  feature_baseline.npz  metadata.json  model.json  preprocessor.pkl  shap_global.json  threshold.json  validation_metrics.json
logic/: breast_cancer_predictor.py  data_module.py  evaluate.py  generate_baseline.py  model.py  model_sklearn.py  onnx_classifier-unused.py  onnx_classifier.py  retraining_pipeline.py  tabnet_model.py  train.py  utilities.py  xgboost_model.py
monitoring/: .dockerignore  Dockerfile  entrypoint.sh  prometheus.yml.template
templates/: home.html
tests/: test_api.py  test_data_module.py  test_evaluate.py  test_generate_baseline.py  test_metrics_tracker.py  test_model.py  test_predictor.py  test_retraining_pipeline.py  test_tabnet_model.py  test_utilities.py  test_xgboost_model.py
