[project]
name = "final-project-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "click>=8.1.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mlflow>=3.6.0",
    "onnx>=1.20.0",
    "onnxconverter-common>=1.16.0",
    "onnxmltools>=1.14.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "optuna>=4.6.0",
    "optuna-integration>=4.6.0",
    "pillow>=12.0.0",
    "prometheus-client>=0.23.1",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.0",
    "pytorch-tabnet>=4.1.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "skl2onnx>=1.19.1",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[tool.coverage.run]
omit = ["logic/train.py",
        "__init__.py",
        "logic/select_best_model.py"]
